<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:iconTint="@color/color_foreground"
        android:icon="@drawable/baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_trigger_filter_download_state"
        android:title="@string/filter_download_state"
        android:icon="@drawable/download"
        android:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_trigger_filter_modality"
        android:title="@string/filter_modality"
        android:icon="@android:drawable/ic_menu_view"
        android:iconTint="?attr/colorControlNormal"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_github_issue"
        android:title="@string/raise_issue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_star_project"
        android:title="@string/star_project"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_resume_all_downloads"
        android:title="@string/resume_all_downloads"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report_crash"
        android:title="@string/report_crash"
        app:showAsAction="never" />

</menu>