<?xml version="1.0" encoding="utf-8"?>
<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_option_radiobutton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:textSize="16sp"
    android:textColor="?android:attr/textColorSecondary" />
